--- a/Components/App.razor
+++ b/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BenDavisWebsite.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Ramaraja&display=swap" rel="stylesheet">
     <HeadOutlet />
 </head>
 
