--- a/Components/ExperienceBar.razor
+++ b/Components/ExperienceBar.razor
@@ -3,7 +3,18 @@
 		<div class="col-md-4">
 			<div class="container d-flex justify-content-center">
 				<div class="container w-auto h-auto">
-					<img src="https://placehold.co/250" />
+					@if (Experience.Media == MediaType.NotProvided || string.IsNullOrEmpty(Experience.MediaLink))
+					{
+						<img src="https://placehold.co/250" />
+					}
+					else if (Experience.Media == MediaType.Video)
+					{
+						
+					}
+					else
+					{
+						<img src=@Experience.MediaLink />
+					}
 				</div>
 			</div>
 		</div>
@@ -28,6 +39,7 @@
 				{
 				<div class="row h-75">
 					<div class="col-9 @transitionStarted">
+						<p class="@textClass">@Experience.Started.ToString("MMM yyyy")-@Experience.Finished.ToString("MMM yyyy")</p>
 						<p class="@textClass">@Experience.Description</p>
 					</div>
 					<div class="col-3 align-items-center d-flex">
