--- a/Components/LogoImage.razor
+++ b/Components/LogoImage.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="col-md-3 col-sm-6">
+<div class="col-lg-2 col-md-3 col-sm-5 pointer">
 	<img onclick=@HandleClick src=@Link class="@Clicked p-2"/>
 </div>
 
