--- a/Components/Pages/Admin.razor
+++ b/Components/Pages/Admin.razor
@@ -1,6 +1,9 @@
 ﻿@page "/admin"
 <h3>Admin</h3>
-<ProjectForm/>
+@if(Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT")?.Contains("Dev") ?? false)
+{
+	<ProjectForm/>
+}
 
 @code {
 
