--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject IJSRuntime JS
 @inject IExperienceService ExperienceService
 @rendermode InteractiveServer
 
@@ -39,6 +40,7 @@ else
 			VisibleExperiences = Experiences;
 			isLoading = false;
 			StateHasChanged();
+			await JS.InvokeVoidAsync("setVideoAttributes");
 		}
 	}
 
