--- a/Components/LogoImage.razor
+++ b/Components/LogoImage.razor
@@ -1,6 +1,6 @@
 ﻿
-<div class="col-lg-2 col-md-3 col-sm-5 pointer">
-	<img onclick=@HandleClick src=@Link class="@Clicked p-2"/>
+<div class="col-auto pointer d-flex flex-column align-items-center">
+	<img onclick=@HandleClick src=@Link class="@Clicked p-2 animated-hover" height=80 width=80/>
 </div>
 
 @code {
