--- a/Components/HomeBar.razor
+++ b/Components/HomeBar.razor
@@ -1,17 +1,18 @@
-﻿<div class="full-page">
+﻿@inject IExperienceService ExperienceService
+<div class="full-page">
 	<div class="row h-100 align-items-center bg-black bg-gradient p-5">
 		<div class="col-md-6">
 			<div class="container d-flex justify-content-center">
 				<div class="container w-auto">
-					<h1 class="text-white">Ben Davis</h1>
+					<h1 class="text-white ">Ben Davis</h1>
 					<Descriptors/>
 				</div>
 			</div>
 		</div>
 		<div class="col-md-6">
 			<h2 class="text-white">Search Technologies</h2>
-			<div class="technology-area">
-				<div class="row pe-5 pt-1 gap-1">
+			<div class="searchitem-area">
+				<div class="row pt-1 gap-1 justify-content-center">
 					@foreach (string image in Images.Keys)
 					{
 						<LogoImage AddSearchItem=AddSearchItem Link=@image Name=@Images[image]/>
@@ -19,13 +20,15 @@
 				</div>
 			</div>
 			<h2 class="text-white mt-4">Search Skills</h2>
-			<div class="row gap-3 p-1">
-				@foreach (string skill in Skills)
-				{
-					<div class="col-auto @(SearchItems.Contains(skill) ? "clicked" : "") pointer bg-secondary rounded">
-						<h4 class="text-black" onclick="@(() => AddSearchItem.InvokeAsync(skill))">@skill</h4>
-					</div>
-				}
+			<div class="searchitem-area">
+				<div class="row gap-3 p-1">
+					@foreach (string skill in Skills)
+					{
+						<div class="col-auto @(SearchItems.Contains(skill) ? "clicked-skill" : "skill") animated-hover pointer p-1 rounded-pill">
+							<h4 class="text-black" onclick="@(() => AddSearchItem.InvokeAsync(skill))">@skill</h4>
+						</div>
+					}
+				</div>
 			</div>
 		</div>
 	</div>
@@ -39,15 +42,21 @@
 	Dictionary<string,string> Images { get; set; } = new() { 
 		{"images/java-original-wordmark.svg","Java"},
 		{"images/javascript.svg","Javascript" },
+		{"images/html-5.svg","HTML" },
+		{"images/css-3.svg","CSS" },
 		{"images/nodejs-original.svg","Node.js" },
 		{"images/react-javascript-js-framework-facebook.svg", "React.js" },
-		{"images/python.svg", "Python" }
+		{"images/python.svg", "Python" },
+		{"images/svelte.svg", "Svelte"},
+		{"images/tailwind-css.svg", "Tailwind"},
+		{"images/postgresql-plain-wordmark.svg","PostgreSQL"},
+		{"images/django-original.svg", "Django"},
+
 	};
-	List<string> Skills { get; set; } = new()
+	List<string> Skills { get; set; } = new();
+
+	protected override async Task OnInitializedAsync()
 	{
-		"Teamwork",
-		"Leadership",
-		"Troubleshooting",
-		"Agile"
-	};
+		Skills = await ExperienceService.GetSkills();
+	}
 }
