--- a/Components/LogoImage.razor
+++ b/Components/LogoImage.razor
@@ -1,5 +1,5 @@
-﻿
-<div class="col-auto pointer d-flex flex-column align-items-center">
+﻿<div class="col-auto pointer d-flex flex-column align-items-center">
+	<span class="tooltip-text text-white">@Name</span>
 	<img onclick=@HandleClick src=@Link class="@Clicked p-2 animated-hover" height=80 width=80/>
 </div>
 
