gave descriptors some more space

--- a/Components/HomeBar.razor
+++ b/Components/HomeBar.razor
@@ -3,7 +3,7 @@
 	<div class="row h-100 align-items-center bg-black bg-gradient p-5">
 		<div class="col-md-6">
 			<div class="container d-flex justify-content-center">
-				<div class="container w-auto">
+				<div class="container w-auto mb-2">
 					<h1 class="text-white ">Ben Davis</h1>
 					<Descriptors/>
 				</div>
